// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH dCNlWL"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH hQSoEY"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH dvgmAG"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH dhXnsx"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH ijOQVe"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH hzBdTE"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH dCNlWL"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH hQSoEY"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH dvgmAG"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH dCNlWL"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH hQSoEY"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH dvgmAG"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH dCNlWL"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH hQSoEY"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH dvgmAG"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-bndzKH dCNlWL"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-bndzKH hQSoEY"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH dvgmAG"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-hMtawp hRxnpO"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH dCNlWL"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH hQSoEY"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH eKZvrT"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH gdqaWg"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH gkOEYX"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi kuLuHP"
      >
        <input
          className="sc-bndzKH dvgmAG"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
